<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HotelApp</string>
    <string name="first_but">New Project</string>
    <string name="second_but">Project</string>
    <string name="third_but">Setting</string>
    <string name="fourth_but">Help</string>
    <string name="name_payday">Payday</string>
    <string name="name_management">Management</string>
    <string name="name_personnel">Personnel</string>
    <string name="name_capital">Capital</string>
    <string name="name_rooms">Rooms</string>
    <string name="help_name">HotelApp® 2014</string>



    <string name="help_about">
        \n
        Состав приложения:\n
        \n
        <b>Административная часть</b>\n
        Управления номерами гостиницы\n
        Редактирование плана гостиницы\n
        Бронирование номеров\n
        Оформление номера\n
        Заказы из номера\n
        Управление уборкой в номерах\n
        Финансовая статистика гостиницы (CRM)\n
        Статистика работы каждого рабочего\n
        \n
        <b>Управление кадрами гостиницы:</b>\n
        Рейтинг работников (KPI)\n
        Наём и увольнение работников\n
        Контроль часов работы персонала\n
        \n
        <b>Клиентская часть:</b>\n
        Бронирование и заказ номеров\n
        Промо-акции\n
        Книга жалоб и предложений\n
    </string>
    <string name="set_title">Setting</string>
    <string name="set_language">Language</string>

    <string-array name="kind_personnel">
        <item>Admins</item>
        <item>Bookkeepers</item>
        <item>Cleaners</item>
        <item>Guards</item>
        <item>Managers</item>
    </string-array>

    <string-array name="Admins">
        <item>Name:work:days:profit</item>
        <item>Jordan 10:100$</item>
        <item>Luci 1:20$</item>
        <item>Max 10:100$</item>
        <item>Zak 10:100$</item>
    </string-array>

    <string-array name="Bookkeepers">
        <item>Name:work:days:profit</item>
        <item>Jordan 10:100$</item>
        <item>Luci 1:20$</item>
        <item>Max 10:100$</item>
        <item>Zak 10:100$</item>
    </string-array>

    <string-array name="Cleaners">
        <item>Name:work:days:profit</item>
        <item>Jordan 10:100$</item>
        <item>Luci 1:20$</item>
        <item>Max 10:100$</item>
        <item>Zak 10:100$</item>
    </string-array>

    <string-array name="Guards">
        <item>Name:work:days:profit</item>
        <item>Jordan 10:100$</item>
        <item>Luci 1:20$</item>
        <item>Max 10:100$</item>
        <item>Zak 10:100$</item>
    </string-array>

    <string-array name="Managers">
        <item>Name:work:days:profit</item>
        <item>Jordan 10:100$</item>
        <item>Luci 1:20$</item>
        <item>Max 10:100$</item>
        <item>Zak 10:100$</item>
    </string-array>

    <string-array name="Hostel">
        <item>hostel</item>
        <item>Kirov #1 +100$</item>
        <item>Kirov #2 +2300$</item>
        <item>Kirov #3 -10$</item>
        <item>Moscow #1 +12100$</item>
        <item>Moscow #2 +33100$</item>
    </string-array>
</resources>
