<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello World, StartActivity"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp" android:layout_above="@+id/button3"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_but"
                android:id="@+id/button3" android:layout_gravity="center_horizontal"
                android:layout_above="@+id/button2" android:layout_alignStart="@+id/button2"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_but"
                android:id="@+id/button2" android:layout_gravity="center_horizontal" android:layout_above="@+id/button4"
                android:layout_alignStart="@+id/button4"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fourth_but"
                android:id="@+id/button4" android:layout_gravity="center_horizontal"
                android:layout_alignParentBottom="true" android:layout_alignParentStart="true"
                android:layout_marginBottom="190dp"/>
    </RelativeLayout>
</LinearLayout>

